--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "unit_testing_pyspark"
-version = "0.0"
+version = "0.1.0"
 description = "Unit testing PySpark code on Databricks"
 authors = [
     { name = "René Luijk", email = "luijk.r@gmail.com" },
@@ -18,7 +18,6 @@ dev-dependencies = [
     "databricks-sdk>=0.37.0",
     "defusedxml>=0.7.1",
     "genbadge>=1.1.1",
-    "git-cliff>=2.6.0",
     "mkdocs-material>=9.5.38",
     "mkdocs>=1.6.1",
     "mypy>=1.13.0",
@@ -36,31 +35,38 @@ dev-dependencies = [
 main = "unit_testing_pyspark.main:main"
 
 [tool.ruff]
-src = ["src"]
 target-version = "py311"
 line-length = 100
 extend-include = ["*.ipynb"]
-exclude = ["scratch"]
+extend-exclude = ["scratch"]
+builtins = ["dbutils", "display", "spark"]
 
 [tool.ruff.lint]
 pydocstyle.convention = "numpy"
 external = ["DOC"]
 select = ["ALL"]
 ignore = [
-    "ANN101",   # "Missing type annotation for `self`." Deprecated.
-    "COM812",   # "Missing trailing comma." Ignored since it conflicts with the formatter.
     "D203",     # "One blank line required before class docstring." Should be disabled by default.
     "D213",     # "Multi-line docstring summary should start at the second line." Should be disabled by default.
     "E501",     # "Line too long." Sometimes my comments are a bit longer.
     "E731",     # "Do not assign a lambda expression, use a def." Needed for spark UDFs.
-    "ERA001",   # "Found commented out code." I comment out code sometimes
-    "FBT001",   # "Boolean positional arg in function definition." I sometimes use this.
-    "FBT002",   # "Boolean default value in function definition." I sometimes use this too.
-    "FBT003",   # "Boolean positional value in function call." This is fairly common in spark.
+    "ERA001",   # "Found commented out code."
+    "FBT001",   # "Boolean positional arg in function definition.
+    "FBT002",   # "Boolean default value in function definition."
+    "FBT003",   # "Boolean positional value in function call." This is common in spark.
     "ISC001",   # "Implicit string concatenation." Ignored since it conflicts with the formatter.
     "N812",     # "Lowercase `functions` imported as non-lowercase." Pretty standard for spark programming.
-    "S101",     # "Use of `assert` detected." Used quite often in tests.
-    "T201",     # "`print` found." I use this for debugging.
+    "T201",     # "`print` found."
+    # Nitpicky exceptions - comment out when productionalizing your code
+    # "BLE001",   # Do not catch blind exception: `Exception`
+    # "D400",     # First line should end with a period
+    # "D401",     # First line of docstring should be in imperative mood
+    # "PD901",    # Avoid using the generic variable name `df` for DataFrames
+    # "PLR2004",  # "Magic value used in comparison, consider replacing with a constant variable."
+    # "TRY003"    #  Avoid specifying long messages outside the exception class
+    # Project-specific exceptions
+    "S311",         # "Standard pseudo-random generators are not suitable for cryptographic purposes
+    "S101",         # "Use of `assert` detected."
 ]
 unfixable = [
     "F401",     # "Unused import." Disabled since it makes linting/formatting notebooks messy and impossible.
@@ -72,7 +78,8 @@ unfixable = [
     "INP001",   # "Part of an implicit namespace package. Add an `__init__.py`." Not needed for Databricks notebooks.
 ]
 "tests/*.py" = [
-    "PLR2004",  # "Magic value used in comparison, consider replacing with a constant variable." This is fine for tests.
+    "PLR2004",  # "Magic value used in comparison, consider replacing with a constant variable."
+    "S101",     # "Use of `assert` detected."
 ]
 
 [tool.mypy]
@@ -107,64 +114,3 @@ major_on_zero = true
 branch = "main"
 commit_author = "github-actions[bot] <actions@github.com>"
 changelog_generate = false
-
-[tool.git-cliff.changelog]
-header = """
-# Changelog\n
-All notable changes to this project will be documented in this file.\n
-"""
-body = """
-{% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
-{% else %}\
-    ## [unreleased]
-{% endif %}\
-{% for group, commits in commits | group_by(attribute="group") %}
-    ### {{ group | striptags | trim | upper_first }}
-    {% for commit in commits %}
-        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
-            {% if commit.breaking %}[**breaking**] {% endif %}\
-            {{ commit.message | upper_first }}\
-    {% endfor %}
-{% endfor %}\n
-"""
-trim = true
-
-[tool.git-cliff.git]
-conventional_commits = true
-filter_unconventional = true
-split_commits = false
-commit_parsers = [
-  { message = "^feat", group = "<!-- 0 -->🚀 Features" },
-  { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
-  { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
-  { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
-  { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
-  { message = "^style", group = "<!-- 5 -->🎨 Styling" },
-  { message = "^test", group = "<!-- 6 -->🧪 Testing" },
-  { message = "^chore\\(release\\)", skip = true },
-  { message = "^chore\\(deps.*\\)", skip = true },
-  { message = "^chore\\(pr\\)", skip = true },
-  { message = "^chore\\(pull\\)", skip = true },
-  { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
-  { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
-  { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
-  { message = "^build", group = "<!-- 10 -->🏗️ Build System" },
-]
-filter_commits = false
-topo_order = false
-sort_commits = "oldest"
-
-[tool.sqlfluff.core]
-dialect = "databricks"
-templater = "jinja"
-max_line_length = 120
-ignore = "parsing"
-
-[tool.sqlfluff.indentation]
-indented_joins = false
-indented_using_on = true
-template_blocks_indent = false
-
-[tool.sqlfluff.rules.capitalisation.keywords]
-capitalisation_policy = "upper"
